Use Courier New font for better OS support

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   justify-content: center;
   align-items: start;
   background-color: #1b2b3a;
-  font-family: "consolas";
+  font-family: "Courier New";
   color: #a6b0b9;
 }
 
